# SoftwareDevML

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: categories.csv  class.csv  genres.csv  test_logits.csv  test_preds.csv
docs/: data_loader.html  index.html  search.js  smoking_prediction.html  src.html
docs/modeling/: predict.html
docs/plots/: index.html  plots.html
docs/smoking_prediction/: data_loader.html  dataset_download.html  modeling.html  plots.html  run.html
docs/src/: data_loader.html  dataset_download.html  modeling.html  plots.html
lightning_logs/version_0/: events.out.tfevents.1758041923.LAPTOP-Q6E6D0I5.17156.0  events.out.tfevents.1758042145.LAPTOP-Q6E6D0I5.17156.1  events.out.tfevents.1758992441.LAPTOP-Q6E6D0I5.28380.0  events.out.tfevents.1758992495.LAPTOP-Q6E6D0I5.28380.1
lightning_logs/version_1/: events.out.tfevents.1758042802.LAPTOP-Q6E6D0I5.20100.0  events.out.tfevents.1758043335.LAPTOP-Q6E6D0I5.20100.1  events.out.tfevents.1759086538.LAPTOP-Q6E6D0I5.11300.0  events.out.tfevents.1759086597.LAPTOP-Q6E6D0I5.11300.1
lightning_logs/version_2/: events.out.tfevents.1759091876.LAPTOP-Q6E6D0I5.15496.0  events.out.tfevents.1759091928.LAPTOP-Q6E6D0I5.15496.1
notebooks/: data_exploration.ipynb
reports/: performance_report.typ
reports/data/: training_metrics.pkl  (+1 more)
scripts/: data_loader_tester.py  run_calibration.py
smoking_prediction/: data_loader.py  dataset_download.py  run.py
src/: __main__.py  data_loader.py  data_loader_tester.py  dataset_download.py  model.py  model_calibration.py  plots.py  plots_3.py  run.py
(+31 files in other folders)
