[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "ML project for smoker classification"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

dependencies = [
    "torch==2.8.0+cpu",
    "torchvision==0.23.0+cpu",
    "pytorch_lightning==2.5.5",
    "matplotlib==3.10.6",
    "requests==2.32.5",
    "tqdm==4.67.1"
]
