[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smoking_prediction"
version = "0.2.0"
description = "ML project for smoker classification"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "pytorch_lightning==2.5.5",
    "matplotlib==3.10.6",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "gradio==5.49.1",
    "pandas",
    "numpy",
    "plotly",
    "scikit-learn",
    "platformdirs",
]

[project.scripts]
smoking-prediction = "smoking_prediction.run:run"
